--- a/CSS/style.css
+++ b/CSS/style.css
@@ -227,7 +227,7 @@ body{
   height:25rem;
   padding-top: 2rem;
   padding-left: 2%;
-  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 /* social media icons*/
